@@ -1,5 +1,6 @@
 ## 0.x.x / xxxx-xx-xx
 
+* Add circuit breaker.
 * Add bulkhead.
 * Add retry.
 * Add static timeout.
